Map display overflow bug fix

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -139,3 +139,7 @@ tr:hover {
 tr:first-of-type:hover {
     background-color: #f7f7f7;
 }
+
+body {
+    overflow: hidden;
+}
